--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   "dependencies": {
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
+    "formik": "^2.2.5",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-router-native": "^5.2.0",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@expo/webpack-config": "^0.12.44",
     "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.1",
     "babel-preset-expo": "~8.1.0",
     "eslint": "^7.13.0",
     "eslint-plugin-react": "^7.21.5"
