--- a/package.json
+++ b/package.json
@@ -1,37 +1,53 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject",
-    "lint": "eslint ./src/**/*.{js,jsx} App.js --no-error-on-unmatched-pattern"
-  },
-  "dependencies": {
-    "@apollo/react-hooks": "^4.0.0",
-    "apollo-boost": "^0.4.9",
-    "dotenv": "^8.2.0",
-    "expo": "~38.0.8",
-    "expo-status-bar": "^1.0.2",
-    "formik": "^2.2.5",
-    "graphql": "^15.4.0",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-web": "~0.11.7",
-    "react-router-native": "^5.2.0",
-    "yup": "^0.29.3",
-    "@react-native-community/async-storage": "~1.11.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.8.6",
-    "@expo/webpack-config": "^0.12.44",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.1",
-    "babel-preset-expo": "~8.1.0",
-    "eslint": "^7.13.0",
-    "eslint-plugin-react": "^7.21.5"
-  },
-  "private": true
+    "main": "node_modules/expo/AppEntry.js",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "expo start --web",
+        "eject": "expo eject",
+        "lint": "eslint ./src/**/*.{js,jsx} App.js --no-error-on-unmatched-pattern",
+        "test": "jest"
+    },
+    "dependencies": {
+        "@apollo/react-hooks": "^4.0.0",
+        "apollo-boost": "^0.4.9",
+        "dotenv": "^8.2.0",
+        "expo": "~38.0.8",
+        "expo-status-bar": "^1.0.2",
+        "formik": "^2.2.5",
+        "graphql": "^15.4.0",
+        "react": "~16.11.0",
+        "react-dom": "~16.11.0",
+        "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+        "react-native-web": "~0.11.7",
+        "react-router-native": "^5.2.0",
+        "yup": "^0.29.3",
+        "@react-native-community/async-storage": "~1.11.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.8.6",
+        "@expo/webpack-config": "^0.12.44",
+        "@testing-library/jest-native": "^3.4.3",
+        "@testing-library/react-native": "^7.1.0",
+        "babel-eslint": "^10.1.0",
+        "babel-loader": "^8.2.1",
+        "babel-preset-expo": "~8.1.0",
+        "eslint": "^7.13.0",
+        "eslint-plugin-jest": "^24.1.3",
+        "eslint-plugin-react": "^7.21.5",
+        "jest": "^26.6.3",
+        "jest-expo": "^39.0.0"
+    },
+    "private": true,
+    "jest": {
+        "preset": "jest-expo",
+        "transform": {
+            "^.+\\.jsx?$": "babel-jest"
+        },
+        "transformIgnorePatterns": [
+            "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*|react-router-native)"
+        ],
+        "setupFilesAfterEnv": ["<rootDir>/setupTests.js"]
+    }
 }
